<resources>
    <string name="app_name">LetMeRemember</string>

    <!--    HOME-->
    <string name="homeSubtitle" translatable="false">CREA TUS NOTAS Y RECORDATORIOS</string>
    <string name="LoginButton" translatable="false">Iniciar Sesión</string>
    <string name="SignUpButton" translatable="false">Registrarse</string>
    <string name="imageDescription" translatable="false">Imagen de home</string>

    <!--    Login-->
    <string name="loginTitle" translatable="false">Bienvenido de Nuevo!!</string>
    <string name="accountLabel" translatable="false">Ingrese a su Cuenta</string>
    <string name="accountInput" translatable="false">Ingrese su Usuario o Correo Electrónico</string>
    <string name="passwordInput" translatable="false">Ingrese su Contraseña</string>
    <string name="loginCheckbox" translatable="false">Recordar Usuario</string>
    <string name="forgotPassword" translatable="false">¿Olvidaste la Contraseña?</string>
    <string name="googleLogIn" translatable="false">Iniciar Sesion con Google</string>
    <string name="githubLogIn" translatable="false">Iniciar Sesion con Github</string>
    <string name="your_web_client_id" translatable="false">AIzaSyAB19fRTBIfqqw_LVKmeabBxK84UvL56y8</string>

    <!--    SignUp-->
    <string name="welcomeSignup" translatable="false">Bienvenido!</string>
    <string name="signupTitle" translatable="false">Registrate en LetMeRemember App</string>
    <string name="signupUser" translatable="false">Ingrese su Usuario </string>
    <string name="signupName" translatable="false">Ingrese su Nombre Completo</string>
    <string name="signupEmail" translatable="false">Ingrese su Correo Electrónico</string>
    <string name="signupPassword" translatable="false">Ingrese su Contraseña</string>
    <string name="signupConfirmPassword" translatable="false">Confirme su Contraseña</string>
    <string name="signUpCheckbox" translatable="false">Al hacer clic en Registrarse, acepta los Términos de servicio y la Política de privacidad de la aplicación LetMeRemember</string>
    <string name="successButton" translatable="false">Continuar a Inicio</string>
    <string name="successMessage" translatable="false">Registro Ingresado Correctamente</string>
    <string name="successResetMessage" translatable="false">Su contraseña se Actualizó Correctamente</string>

    <!--    Reset password-->
    <string name="resetPassword" translatable="false"><u>Recupera tu contraseña</u></string>
    <string name="step1" translatable="false">Paso 1:</string>
    <string name="next" translatable="false">Continuar</string>

    <!--    Group-->
    <string name="groupCreateTitle" translatable="false">Crear nuevo grupo</string>
    <string name="groupEditTitle" translatable="false">Editar grupo</string>
    <string name="groupName" translatable="false">nombre</string>
    <string name="groupCreateButton" translatable="false">Enviar</string>
    <string name="AlarmGroup" translatable="false">Alarma de grupo: </string>
    <string name="stopAlarm" translatable="false">Detener alarma</string>
    <string name="stopAlarmAndLeaveButton" translatable="false">Detener alarma y salir</string>

    <!--    Recycle Bin-->
    <string name="recycletitle" translatable="false">Papelera de Reciclaje</string>
    <string name="contrecycle" translatable="false">Puedes recuperar las tarjetas que has eliminado sin querer o recuperar tarjetas que necesitas volver a recordar!</string>
    <string name="recyclerecuperar" translatable="false">Recuperar</string>
    <string name="recycledelete" translatable="false">Eliminar</string>
    <string name="title_activity_menu_grupos">activity_menu_grupos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuraciones</string>
    <string name="logOut">Cerrar sesión</string>
    <string name="action_groups" translatable="false">Grupos CRUD</string>
    <string name="recycleCardName" translatable="false">Eliminaste:</string>

    <string name="menu_home">Home</string>
    <string name="menu_papelera">Papelera de Reciclaje</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_recordatorio">Recordatorio</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>