<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#D5F2E8"
    tools:context=".ResetPasswordEmailActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetPassword"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step1"
        android:textSize="20sp"
        android:layout_marginTop="10sp"
        android:textColor="@color/black"
        android:layout_marginStart="30dp"
        android:layout_gravity="start"/>
    <EditText
        android:id="@+id/resetPasswordEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:hint="@string/signupEmail"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:inputType="textEmailAddress"
        android:textSize="18sp" />
    <Button
        android:id="@+id/sendEmailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/blue"
        android:paddingHorizontal="40dp"
        android:paddingVertical="15dp"
        android:textColor="@color/white"
        android:text="@string/next"
        android:textSize="15sp" />
</LinearLayout>