<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D5F2E8"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="50dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:gravity="center"
                android:text="@string/loginTitle"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="60dp"
                android:gravity="start"
                android:text="@string/accountLabel"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="40dp"
                android:background="@color/white"
                android:hint="@string/accountInput"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:inputType="textEmailAddress"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="40dp"
                android:inputType="textPassword"
                android:background="@color/white"
                android:hint="@string/passwordInput"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:textSize="18sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <CheckBox
                    android:id="@+id/loginCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loginCheckbox"
                    android:layout_marginStart="20dp"
                    />
                <TextView
                    android:id="@+id/forgotPasswordButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:gravity="end"
                    android:text="@string/forgotPassword"
                    android:textColor="@color/black"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:backgroundTint="@color/blue"
                android:paddingHorizontal="40dp"
                android:paddingVertical="15dp"
                android:textColor="@color/white"
                android:text="@string/LoginButton"
                android:textSize="15sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:text="O"
                android:gravity="center"
                />

            <Button
                android:id="@+id/loginGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/google_icon"
                android:paddingVertical="15dp"
                android:text="@string/googleLogIn"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <Button
                android:id="@+id/loginGithub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/github_mark"
                android:paddingVertical="15dp"
                android:text="@string/githubLogIn"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>