<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddGroupActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D5F2E8"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="50dp">


            <TextView
                android:id="@+id/groupCreateTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:gravity="center"
                android:text="@string/groupCreateTitle"
                android:textColor="@color/black"
                android:textSize="25sp" />


            <EditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:hint="@string/groupName"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:inputType="text"
                android:textSize="18sp" />


            <Button
                android:id="@+id/buttCalcular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:backgroundTint="@color/blue"
                android:paddingHorizontal="40dp"
                android:paddingVertical="15dp"
                android:textColor="@color/white"
                android:text="@string/groupCreateButton"
                android:textSize="15sp" />



        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>