<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="50dp"
            >
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/home"
                android:contentDescription="@string/imageDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Let"
                    android:textColor="#2707EA"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Me"
                    android:textColor="#676DA0"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Remember"
                    android:textColor="#070F57"
                    android:textSize="30sp" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/homeSubtitle"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:gravity="center"
                />

            <Button
                android:id="@+id/loginButtonHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:backgroundTint="@color/blue"
                android:layout_marginHorizontal="40dp"
                android:paddingVertical="15dp"
                android:textColor="@color/white"
                android:text="@string/LoginButton"
                android:textSize="15sp" />
            <Button
                android:id="@+id/signupHomeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SignUpButton"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:layout_marginHorizontal="40dp"
                android:paddingVertical="15dp"
                android:backgroundTint="@android:color/transparent"
                app:strokeColor="@color/blue"
                app:strokeWidth="2dp"
                android:textColor="@color/blue"
                android:textSize="15sp"
                android:stateListAnimator="@null"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>